--- a/dashboardv2/public/js/templates/tag/CreateTagLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/CreateTagLayoutView_tmpl.html
@@ -19,13 +19,10 @@
 </div>
 <form name="tagDefinitionform" class="hide form-horizontal" data-id="createTagForm">
     <div class="form-group">
-        <label class="control-label col-sm-2 {{#if create}}required{{/if}}" for="name">Name</label>
-        {{#if create}}
+        <label class="control-label col-sm-2 {{#if create}}required{{/if}}" for="name">Display Name</label>
         <div class="col-sm-10">
-            <input class="form-control" data-id="tagName" placeholder="Name(required)" autofocus />
+            <input class="form-control" data-id="displayName" placeholder="Display Name(required)" autofocus />
         </div>
-        {{else}}
-        <span class="ellipsis-with-margin control-label text-left col-sm-10" data-id="title"></span> {{/if}}
     </div>
     <div class="form-group">
         <label class="control-label col-sm-2 required" for="description">Description</label>
