--- a/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
@@ -76,6 +76,7 @@
                         <a href="javascript:void(0)" data-id='createEntity'> create new entity </a>
                         {{/if}}
                     </p>
+                    <marquee style="color: black;background-image: radial-gradient( circle farthest-corner at 50.7% 54%, rgba(204,254,152,1) 0%, rgba(229,253,190,1) 92.4% );border-radius: 10px;padding-top: 6px;padding-bottom: 6px;width: 100%;color: #1a561c;"><div style="">You either forget an unsolved issue or live long enough to figure it out</div></marquee>
                 </div>
             </div>
             <div class="pagination-box searach-result-pagination row" style="display: none">
